Conexion con BDA terminada.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.jar=${dist.dir}/Reto0_G3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.49.jar=C:\\Users\\2dam\\Documents\\NetBeansProjects\\Reto0_ADT\\conector\\mysql-connector-java-5.1.49.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.mysql-connector-java-5.1.49.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +80,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=reto0_g3.Reto0_G3
+javafx.main.class=main.Application
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
