--- a/src/model/propertiesBD.properties
+++ b/src/model/propertiesBD.properties
@@ -1,4 +1,5 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
+DB= welcome
+Driver=com.mysql.jdbc.Driver
+Conn=jdbc:mysql://localhost:3306/welcome
+DBUser=root
+DBPass=abcd*1234
